# kepler-model-validation

./: go.mod  go.sum
.github/workflows/: image.yml  release.yml
docker-compose/: docker-compose.yaml
docker-compose/metal/: compose.yaml  docker-compose-estimator.yaml  docker-compose.yaml  stresser.py
docker-compose/metal/grafana/: dashboards.yml
docker-compose/metal/grafana/dashboards/kepler/: validation-dashboard.json
docker-compose/metal/kepler/etc/kepler/kepler.config/: config
docker-compose/metal/prom/: prometheus.yml
docker-compose/metal/validator/: pyproject.toml  validator.yaml
docker-compose/metal/validator/src/validator/cli/: __init__.py
docker-compose/metal/validator/src/validator/prom_query_validator/: prom_query_validator.py
docker-compose/metal/validator/src/validator/stresser/: stresser.py
docker-compose/metal/validator/tests/: utils.py
docker-compose/prom/: prometheus.yml
docker-compose/stresser-ssh-connector/: README.md  pyproject.toml
docker-compose/vm/: compose.yaml  docker-compose.yaml  stressor.sh
docker-compose/vm/kepler/: configmap.yaml  kepler-ds.yaml
docker-compose/vm/kepler/docker-compose/: docker-compose.yaml
docker-compose/vm/kepler/etc/kepler/kepler.config/: MODEL_CONFIG
